--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,15 +42,9 @@ numpy = [
   { version = ">=2.1", python = "^3.13" },
 ]
 deprecation = ">=2.1"
-# Documentation, must be in main dependencies (but optional) list for
-# readthedocs integration.
-# See https://github.com/readthedocs/readthedocs.org/issues/4912.
-Sphinx = { version = ">=5.0", optional = true }
-sphinx_rtd_theme = { version = ">=1.0", optional = true }
 grpcio = { version = ">=1.49.0,<2.0", optional = true }
 protobuf = { version = ">=4.21", optional = true }
 hightime = "^0.2.2"
-toml = { version = ">=0.10.2", optional = true }
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
@@ -59,7 +53,6 @@ requests = ">=2.25.0"
 
 
 [tool.poetry.extras]
-docs = ["sphinx", "sphinx_rtd_theme", "toml"]
 grpc = ["grpcio", "protobuf"]
 
 [tool.poetry.group.codegen.dependencies]
@@ -71,6 +64,15 @@ grpcio-tools = [
   { version = "1.67.0", python = "^3.13" },
 ]
 mypy-protobuf = ">=3.4"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+Sphinx = { version = ">=8.2", python = "^3.11" }
+sphinx-click = ">=4.1.0"
+sphinx-rtd-theme = ">=1.0.0"
+toml = ">=0.10.2"
 
 [tool.poetry.group.examples]
 # The "examples" group is optional because matplotlib does not distribute wheels for 32-bit Windows.
