--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,8 +130,8 @@ markers = [
 ]
 
 [build-system]
-requires = ["poetry>=1.2"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.8"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
 files = "generated/,tests/"
