--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ numpy = [
 deprecation = ">=2.1"
 grpcio = { version = ">=1.49.0,<2.0", optional = true }
 protobuf = { version = ">=4.21", optional = true }
-hightime = "^0.2.2"
+hightime = ">=0.2.2"
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
