--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,16 +47,17 @@ protobuf = { version = ">=4.21", optional = true }
 hightime = ">=0.2.2"
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
-click = ">=8.0.0"
+click = [
+  { version = ">=8.0.0,<8.2.0", python = ">=3.9,<3.10" },
+  { version = ">=8.0.0", python = "^3.10" },
+]
 distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
-
 
 [tool.poetry.extras]
 grpc = ["grpcio", "protobuf"]
 
 [tool.poetry.group.codegen.dependencies]
-click = "^8.1"
 Mako = "^1.2"
 grpcio-tools = [
   { version = "1.49.1", python = ">=3.9,<3.12" },
@@ -78,7 +79,10 @@ toml = ">=0.10.2"
 optional = true
 
 [tool.poetry.group.examples.dependencies]
-matplotlib = { version = ">=3.9.0", python = ">=3.9" }
+matplotlib = [
+  { version = ">=3.9.0,<3.10.0", python = ">=3.9,<3.10" },
+  { version = ">=3.9.0", python = "^3.10" },
+]
 nptdms = ">=1.9.0"
 
 [tool.poetry.group.lint.dependencies]
