--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,7 +5,8 @@
   "extends": [
     "config:recommended",
     "helpers:pinGitHubActionDigestsToSemver",
-    ":enableVulnerabilityAlerts"
+    ":enableVulnerabilityAlerts",
+    ":rebaseStalePrs"
   ],
   "packageRules": [
     {
