--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -17,5 +17,6 @@ jobs:
     name: Run CI
     uses: ./.github/workflows/CI.yml
     permissions:
+      contents: read
       checks: write
       pull-requests: write
