--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ grpcio-tools = [
   { version = "1.67.0", python = "^3.13" },
 ]
 mypy-protobuf = ">=3.4"
+tomlkit = ">=0.11.0"
 
 [tool.poetry.group.docs]
 optional = true
